move input to root of question

--- a/1/part1/Makefile
+++ b/1/part1/Makefile
@@ -1,4 +1,4 @@
-test: main.cpp test_input.in
+test: main.cpp ../test_input.in
 	g++ main.cpp -o main.o -DTEST && ./main.o
-real: main.cpp real_input.in
+real: main.cpp ../real_input.in
 	g++ main.cpp -o main.o -DREAL && ./main.o
